style.css
@import url("https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

body {
  margin: 0;
  font-family: "Poppins", sans-serif, "Crete Round", 'Inter';
}

body::-webkit-scrollbar {
  width: 8px;

  /* width of the entire scrollbar */
}

body::-webkit-scrollbar-track {
  background: #172b4d;

  /* color of the tracking area */
}

body::-webkit-scrollbar-thumb {
  background-color: #36b37e;

  /* color of the scroll thumb */
  border-radius: 20px;

  /* roundness of the scroll thumb */
}

body::-webkit-scrollbar-thumb:active {
  background-color: #008552;
}

body::-webkit-scrollbar:hover {
  width: 15px;
}

.navigation {
  height: 48px;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: #fff;
  position: fixed;
  z-index: 100;
}

.logo {
  width: 114px;
  height: 48px;
  margin-left: 24px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.logo > h3 {
  width: 90px;
  height: 28px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 28px;
  margin-left: 12px;
}

.headline-section {
  height: 651px;
  display: flex;
  flex-direction: column;
  align-content: center;
  padding-top: 48px;
}

aside img {
  margin-top: -75px;
}

footer div img {
  display: none;
}

.illustration-mobile > img {
  width: 100%;
  height: 648px;
  position: absolute;
  z-index: -1;
}

.heading-text {
  height: 192px;
  margin: 0 24px;
  margin-top: 64px;
  margin-bottom: 0;
  text-align: center;
}

.heading-text > h1 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
  margin: 0;
}

.h-green {
  color: #36b37e;
}

.supporting-text {
  margin: 0 24px;
  height: 164px;
  margin-top: 58px;
  margin-bottom: 0;
}

.supporting-text > p {
  margin: 0;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
  color: #172b4d;
}

.social-icons {
  list-style: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 0 24px;
  margin-top: 58px;
  padding: 0;
}

.social-icons > li {
  margin-right: 16px;
}

.action-btn {
  display: flex;
  flex-direction: row;
  justify-content: center;
  height: 48px;
  margin: 0 24px;
  margin-top: 34px;
}

.text > img {
  width: 48px;
  height: 4px;
  background: #36b37e;
  border-radius: 24px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

.icon > img {
  margin-top: 16px;
  position: absolute;
}

.action-btn > a > img {
  height: 40px;
  width: 40px;
  margin-top: 4px;
}

main {
  display: flex;
  height: 3238px;
  justify-content: center;
}

.text {
  display: flex;
  height: 125px;
  width: 100%;
  margin: 0 24px;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.text > h2 {
  color: #172b4d;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  display: flex;
  align-items: center;
  text-align: center;
}

.work-container {
  position: absolute;
  display: grid;
  grid-template-columns: auto;
  gap: 24px;
  margin-top: 204px;
}

.card-item {
  display: flex;
  height: 474px;
  width: 327px;
  border-radius: 8px;
  background: #ebf0ee;
  border: 1px solid #d0d9d4;
  font-size: 30px;
  flex-direction: column;
  justify-content: flex-end;
}

.text-box {
  height: 222px;
  border-radius: 8px;
  padding: 16px;
  gap: 16px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #fff;
  justify-content: space-between;
}

.project-title {
  width: 295px;
  height: 57px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  display: flex;
  align-items: center;
  text-align: center;
  color: #3a4a42;
  margin: 0;
}

.project-tag {
  width: 305px;
  height: 32px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 0;
  padding: 0;
}

.project-tag > li {
  height: auto;
  padding: 8px 12px;
  display: block;
  background: #ebf0ee;
  border-radius: 4px;
  list-style: none;
}

.about-me-text > p {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 32px;
  text-align: center;
  color: #42526e;
}

.project-tag > li > p {
  margin: 0;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #3a4a42;
}

.project-btn-sec {
  width: 305px;
  height: 69px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.project-btn-sec > button {
  color: white;
  border: none;
  padding: 12px;
  width: 122px;
  height: 48px;
  background: #36b37f;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
}

.about-me-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
  height: 333px;
}

.about-me-text > button {
  background: #36b37f;
  border-radius: 4px;
  width: 159px;
  height: 48px;
  border: none;
  letter-spacing: 0.03em;
  color: #fff;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
}

.project-btn-sec > button:active {
  background: #008552;
}

.about-me-illustration {
  top: 0;
  position: absolute;
  width: 100%;
  z-index: -1;
}

.img-1 {
  margin-top: -62px;
  float: right;
  width: 68px;
  height: 127px;
}

.img-2 {
  margin-top: 279px;
  float: left;
  width: 72.52px;
  height: 55.87px;
}
/* ... */

